--- a/css/style.css
+++ b/css/style.css
@@ -623,7 +623,7 @@ p {
     }
 
     h2 {
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-family: cursive;
         font-size: 18px;
         font-style: italic;
         color: dimgrey;
