--- a/css/style.css
+++ b/css/style.css
@@ -147,8 +147,8 @@ p {
 }
 
 ul {
-    font-family: cursive;
-    /* HOW TO CHANGE FONT SIZE? */
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+        /* HOW TO CHANGE FONT SIZE? */
 }
 
 #list {
@@ -617,7 +617,7 @@ p {
         font-size: 20px;
         color: rgb(211, 233, 156);
         font-style: italic;
-        justify-content: center;
+        text-align: center;
         font-weight: lighter;
         padding: 10px 20px;
     }
